--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@ body{
     color: white;
 }
 
-ul{
+.linkit{
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+a{
+    display: flex;
+    transition: background-color 0.5s ease-out;
+    transition: color 0.5s ease-out;
 }
 
 a:link{
@@ -20,12 +26,13 @@ a:visited{
     text-decoration: none;
 }
 
-a:active{
-    color: white;
+a:hover{
+    background-color: white;
+    color: black;
     text-decoration: none;
 }
 
-a:hover{
+a:active{
     color: white;
     text-decoration: none;
 }
