--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body{
 
 a{
     display: flex;
-    transition: background-color 0.5s ease-in-out;
-    transition: color 0.5s ease-in-out;
+    transition: background-color 0.5s ease-in-out 0.5s,
+    color 0.5s ease-in-out 0.5s;
 }
 
 a:link{
